default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__Access_Code__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Access_Code__c</fullName>
    <description>Access Code</description>
    <inlineHelpText>ACCESS CODE</inlineHelpText>
    <label>Access Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>