default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__DocuSign_EnvelopeID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_EnvelopeID__c</fullName>
    <description>DocuSign Envelope ID</description>
    <inlineHelpText>DOCUSIGN ENVELOPE ID</inlineHelpText>
    <label>DocuSign Envelope</label>
    <referenceTo>dsfs__DocuSign_Envelope__c</referenceTo>
    <relationshipLabel>DocuSign Envelope Recipient</relationshipLabel>
    <relationshipName>DocuSign_Envelope_Recipient</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>