default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__DocuSign_Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Signature_Name__c</fullName>
    <description>DocuSign Signature Name</description>
    <inlineHelpText>DOCUSIGN SIGNATURE  NAME</inlineHelpText>
    <label>DocuSign Signature Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>