default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__DocuSign_Signer_Type__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Signer_Type__c</fullName>
    <description>DocuSign Signer Type</description>
    <inlineHelpText>DOCUSIGN SIGNER TYPE</inlineHelpText>
    <label>DocuSign Signer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signer</fullName>
                <default>true</default>
                <label>Signer</label>
            </value>
            <value>
                <fullName>Carbon Copy</fullName>
            </value>
            <value>
                <fullName>Certified Delivery</fullName>
            </value>
            <value>
                <fullName>Sign in person</fullName>
            </value>
            <value>
                <fullName>Address recipients</fullName>
            </value>
            <value>
                <fullName>Manage envelope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>