default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__DSER_CustomFeatures__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DSER_CustomFeatures__c</fullName>
    <label>CustomFeatures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>