default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__DSER_CustomFeaturesEx__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DSER_CustomFeaturesEx__c</fullName>
    <label>CustomFeaturesEx</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>