default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__DSER_CustomName__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DSER_CustomName__c</fullName>
    <label>CustomName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>