default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__DSER_LeadID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DSER_LeadID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DocuSign Envelope Recipient Lead ID</description>
    <inlineHelpText>DOCUSIGN ENVELOPE RECIPIENT LEAD ID</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DocuSign Envelope Recipient</relationshipLabel>
    <relationshipName>DocuSign_Envelope_Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>