default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__DSER_UserID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DSER_UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DocuSign Envelope Recipient User ID</description>
    <inlineHelpText>DOCUSIGN ENVELOPE RECIPIENT USER ID</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocuSign_Envelope_Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>