default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>