default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>