default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__Language__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Language__c</fullName>
    <description>Friendly name.</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>