default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>dsfs__LanguageCode__c</fullName>
    <description>2 Character language code.</description>
    <label>Language Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>