default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>