default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__Recipient_Note__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Recipient_Note__c</fullName>
    <description>Note for Recipient</description>
    <inlineHelpText>NOTE FOR RECIPIENT</inlineHelpText>
    <label>Recipient Note</label>
    <type>TextArea</type>
</CustomField>