default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__Recipient_Note_Long__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Recipient_Note_Long__c</fullName>
    <description>Note for Recipient</description>
    <inlineHelpText>Note for Recipient</inlineHelpText>
    <label>Recipient Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>