default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__RoleName__c.field-meta.xml
<CustomField>
    <fullName>dsfs__RoleName__c</fullName>
    <label>RoleName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>