default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__RoleValue__c.field-meta.xml
<CustomField>
    <fullName>dsfs__RoleValue__c</fullName>
    <description>Value associated with the DocuSign Recipient Role. This value is used to map to default anchor tags
			in documents.</description>
    <inlineHelpText>VALUE ASSOCIATED WITH THE DOCUSIGN RECIPIENT ROLE. THIS VALUE IS USED TO MAP TO DEFAULT ANCHOR TAGS IN DOCUMENTS.</inlineHelpText>
    <label>RoleValue</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>