default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__SigningGroupId__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SigningGroupId__c</fullName>
    <label>Signing Group Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>