default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__SignInPersonEmail__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SignInPersonEmail__c</fullName>
    <label>Sign In Person Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>