default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__SignInPersonName__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SignInPersonName__c</fullName>
    <description>Name of person siging when Sign In Person is set.</description>
    <label>Sign In Person Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>