default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__SMSAuthentication_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SMSAuthentication_PhoneNumber__c</fullName>
    <label>SMSAuthenticationPhoneNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>