default/objects/dsfs__DocuSign_Envelope_Recipient__c/fields/dsfs__Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Validation_Message__c</fullName>
    <description>Validation Message</description>
    <inlineHelpText>VALIDATION MESSAGE</inlineHelpText>
    <label>Validation Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>